...
          <TextView
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="#CE93D8"
            android:text="@string/ingredients"
            />

          <TextView
            android:id="@+id/ingredients"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:overScrollMode="never"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/divider"
...
