<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  >

  <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.recipedetail.StepFragment"
    >

    <com.google.android.exoplayer2.ui.PlayerView
      android:id="@+id/video_view"
      android:layout_width="match_parent"
      android:layout_height="230dp"
      />

    <TextView
      android:id="@+id/step_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      style="@style/TextAppearance.MaterialComponents.Body1"
      tools:text="Bake the cake"/>

  </androidx.appcompat.widget.LinearLayoutCompat>

</layout>

